@@ -2,6 +2,8 @@ Revision history for Perl extension GIS-Distance-GeoEllipsoid.
 
 {{$NEXT}}
 
+ - Use GIS::Distance's new interface.
+
 0.11 2019-03-07T23:17:39Z
 
  - Depend on latest Geo::Ellipsoid, 1.14+.
